# wasmo-old

./: .env.sample  .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTES.md  README.md  codegen.ll  empty.ll  examples.wat  generated_main.rs  lite.sh  print.ll  wasm.txt  wasmo-codegen-symbols.txt  wasmo-jit-symbols.txt  wasmtorch.bat  wasmtorch.sh
design/: ABI.md  EMSCRIPTEN_APIs.md  IMPORTS.md  SYSTEM.md  SYSTEM_DESIGN.md
examples/: codegen.rs  invalid_parsing.rs  jit.rs  llvm.rs  parser.rs  runtime_aot.rs  test_samples.rs  tests.rs  utils.rs
examples/utils/: mod.rs  utils.rs
examples/wasm/: samples.rs
examples/wasm/code/: samples.rs
examples/wat/: samples.wat  valid_add.wat  valid_block.wat  valid_empty_block.wat  valid_export_section.wat  valid_multiple_block.wat  valid_result_type.wat  valid_surplus_stack.wat
examples/wat/invalid/: start-parameter.wat  start-return-type.wat
examples/wat/valid/: func-body.wat  mem-data.wat  mem-table-start.wat  mem-table.wat  start.wat  table-elem.wat  wasi-print.wat
lib/codegen/: Cargo.toml  README.md
lib/codegen/src/: codegen.rs  convert.rs  error.rs  lib.rs  options.rs
lib/codegen/src/generator/: function.rs  mod.rs  module.rs
lib/codegen/src/generator/global/: unix.rs
lib/codegen/src/generator/memory/: mod.rs  unix.rs  win32.rs
lib/codegen/src/generator/table/: unix.rs
lib/llvm/: Cargo.toml  README.md
lib/llvm/src/: README.md  builder.rs  codegen.rs  context.rs  enums.rs  errors.rs  execution_engine.rs  lib.rs  macros.rs  module.rs  orc.rs  target.rs
lib/llvm/src/support/: mod.rs  string.rs
lib/llvm/src/types/: array.rs  enums.rs  float.rs  function.rs  int.rs  mod.rs  pointer.rs  struct_.rs  traits.rs  ty.rs  type_.rs  vector.rs  void.rs
lib/llvm/src/values/: array.rs  enums.rs  function.rs  instruction.rs  mod.rs  pointer.rs  traits.rs  value.rs
lib/llvm/src/wrapper/: basic_block.rs  builder.rs  context.rs  execution_engine.rs  module.rs  string.rs
lib/llvm/src/wrapper/types/: array.rs  enums.rs  float.rs  int.rs  mod.rs  struct_.rs  ty.rs
lib/llvm/src/wrapper/values/: float.rs  function.rs  int.rs  mod.rs  struct_.rs  traits.rs  vector.rs
lib/parser/: Cargo.toml  README.md
lib/parser/src/: errors.rs  ir.rs  kinds.rs  lib.rs  macros.rs  parser.rs  stack.rs  utils.rs  validation.rs
lib/parser/src/custom/: name.rs
lib/parser/src/operator/: constants.rs  control_flow.rs  memory.rs  mod.rs  numeric.rs  parametric.rs  variable_access.rs
lib/parser/src/operators/: constants.rs  control_flow.rs  memory.rs  numeric.rs  parametric.rs  stack.rs
lib/runtime/: Cargo.toml  README.md
lib/runtime/src/: compilation.rs  container.rs  context.rs  data.rs  descriptions.rs  errors.rs  exports.rs  func.rs  handlers.rs  imports.rs  instance.rs  instantiation.rs  lib.rs  macros.rs  memory.rs  module.rs  options.rs  pointers.rs  types.rs
lib/tests/: Cargo.toml  README.md
lib/utils/: Cargo.toml  README.md
lib/utils/src/: file.rs  lib.rs  macros.rs  path.rs
lib/wasabi/: Cargo.toml  README.md
lib/wasabi/src/: imports.rs
scripts/: wasmo-setup.bat  wasmo-setup.sh
src/: example.rs  lib.rs  utils.rs  wasm_codes.rs
