[package]
name = "wasmo"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
edition = "2018"
#-----------------------------------------
description = "An embeddable WebAssembly virtual machine"
readme = "README.md"
repository = "https://github.com/appcypher/wasmo"
keywords = ["compiler", "webassembly", "vm", "runtime", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmo"
homepage = "https://github.com/appcypher/wasmo"
license = "Apache-2.0"

[dependencies]
wasmo-codegen = { path = "lib/codegen" }
wasmo-llvm = { path = "lib/llvm" }
wasmo-utils = { path = "lib/utils" }
dotenv = "0.13.0"

[features]
debug = ["wasmo-codegen/debug"]
verbose = ["wasmo-codegen/verbose", "wasmo-codegen/debug"]

[profile.release]
lto = "fat"
opt-level = 3
