[package]
name = "wasmlite-codegen"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0"
edition = "2018"
#-----------------------------------------
description = "This crate generates LLVM module from a WebAssembly module"
readme = "../../README.md"
repository = "https://github.com/appcypher/wasmlite"
keywords = ["compiler", "webassembly", "vm", "runtime", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmlite"
homepage = "https://github.com/appcypher/wasmlite"

[dependencies]
llvm-sys = "60"
wasmlite-llvm = { path = "../llvm" }
wasmlite-parser = { path = "../parser" }
wasmlite-utils = { path = "../utils" }
