[package]
name = "wasmo-codegen"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0"
edition = "2018"
#-----------------------------------------
description = "This crate generates LLVM module from a WebAssembly binary"
readme = "../../README.md"
repository = "https://github.com/appcypher/wasmo"
keywords = ["compiler", "webassembly", "vm", "runtime", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmo"
homepage = "https://github.com/appcypher/wasmo"

[dependencies]
wasmparser = "0.31.1"
wasmo-llvm = { path = "../llvm" }
wasmo-utils = { path = "../utils" }
wasmo-runtime = { path =  "../runtime" }

[features]
debug = []
verbose = []
aot = []
jit-eager = []
jit-lazy = []
jit-eval = []
