[package]
name = "wasmlite-llvm"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0"
edition = "2018"
#-----------------------------------------
description = "This crate creates LLVM module and AOT/JIT facilities"
readme = "../../README.md"
repository = "https://github.com/appcypher/wasmlite"
keywords = ["compiler", "webassmebly", "vm", "runtime", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmlite"
homepage = "https://github.com/appcypher/wasmlite"

[dependencies]
llvm-sys = "60"
wasmlite-parser = { path = "../parser" }
wasmlite-utils = { path = "../utils" }
