[package]
name = "wasmo-llvm"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0"
edition = "2018"
#-----------------------------------------
description = "This crate creates LLVM module and AOT/JIT facilities"
readme = "../../README.md"
repository = "https://github.com/appcypher/wasmo"
keywords = ["compiler", "webassembly", "vm", "runtime", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmo"
homepage = "https://github.com/appcypher/wasmo"

[dependencies]
llvm-sys = "80"
libc = "0.2.65"
wasmo-utils = { path = "../utils" }

[features]
debug = []
verbose = []
