[package]
name = "wasmlite-parser"
version = "0.1.0"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0"
edition = "2018"
#-----------------------------------------
description = "The crate parses a WebAssembly module and can generate an LLVM based the data extracted from the module"
readme = "README.md"
repository = "https://github.com/appcypher/wasmlite"
keywords = ["compiler", "webassmebly", "wasm", "parser", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "#"
homepage = "#"

[dependencies]
wasmlite-llvm = { path = "../llvm", version = "0.1.0" }
wasmlite-utils = { path = "../utils", version = "0.1.0" }

[features]
debug = []
