[package]
name = "wasmlite-parser"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0"
edition = "2018"
#-----------------------------------------
description = "This crate parses WebAssembly modules and can generate LLVM IR based the data extracted from a module"
readme = "../../README.md"
repository = "https://github.com/appcypher/wasmlite"
keywords = ["compiler", "webassembly", "wasm", "parser", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "#"
homepage = "#"

[dependencies]
wasmlite-llvm = { path = "../llvm", version = "0.0.1" }
wasmlite-utils = { path = "../utils", version = "0.0.1" }

[features]
debug = []
