[package]
name = "wasmlite-parser"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0"
edition = "2018"
#-----------------------------------------
description = "This crate parses WebAssembly modules and can generate LLVM IR based the data extracted from a module"
readme = "../../README.md"
repository = "https://github.com/appcypher/wasmlite"
keywords = ["compiler", "webassembly", "wasm", "parser", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmlite"
homepage = "https://github.com/appcypher/wasmlite"

[dependencies]
wasmlite-utils = { path = "../utils" }

[features]
debug = []
