[package]
name = "wasmo-runtime"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
edition = "2018"
#-----------------------------------------
description = "wasmo runtime component"
readme = "README.md"
repository = "https://github.com/appcypher/wasmo"
keywords = ["compiler", "webassembly", "vm", "runtime", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmo"
homepage = "https://github.com/appcypher/wasmo"
license = "Apache-2.0"

[dependencies]
wasmo-llvm = { path = "../llvm" }
wasmo-utils = { path = "../utils" }
libc = "0.2.49"
hashbrown = "0.6"

[features]
debug = []
verbose = []
