[package]
name = "wasmlite-utils"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0"
edition = "2018"
#-----------------------------------------
description = "This crate contains utilities for wasmlite project"
readme = "../../README.md"
repository = "https://github.com/appcypher/wasmlite"
keywords = ["compiler", "webassembly", "wasm", "utils"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmlite"
homepage = "https://github.com/appcypher/wasmlite"

[dependencies]
wabt = "0.7.4" # Only there for converting .wat to .wasm

[features]
debug = []
verbose = []

