[package]
name = "wasmlite-wasabi"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
edition = "2018"
#-----------------------------------------
description = "wasmlite support for Clang/musl ABI"
readme = "README.md"
repository = "https://github.com/appcypher/wasmlite"
keywords = ["compiler", "webassembly", "vm", "runtime", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmlite"
homepage = "https://github.com/appcypher/wasmlite"
license = "Apache-2.0"

[dependencies]
wasmlite-runtime = { path = "../runtime" }
wasmlite-utils = { path = "../utils" }

[features]
debug = []
verbose = []
