[package]
name = "wasmo-wasabi"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
edition = "2018"
#-----------------------------------------
description = "wasmo support for wasabi"
readme = "README.md"
repository = "https://github.com/appcypher/wasmo"
keywords = ["compiler", "webassembly", "vm", "runtime", "llvm"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasmo"
homepage = "https://github.com/appcypher/wasmo"
license = "Apache-2.0"

[dependencies]
wasmo-runtime = { path = "../runtime" }
wasmo-utils = { path = "../utils" }

[features]
debug = []
verbose = []
